--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     restart: always
     depends_on:
       - db
+    ports:
+      - "9000:9000"  
     volumes:
       - ./site:/var/www/html
     environment:
