--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,11 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: wordpress_db
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root
+    volumes:
+      - ./mysql:/var/lib/mysql:rw  
 
   php:
     image: php:7.4-fpm
@@ -15,34 +20,45 @@ services:
     ports:
       - "9000:9000"  
     volumes:
-      - ./site:/var/www/html
+      - ./site:/var/www/html:rw
     environment:
       WORDPRESS_DB_HOST: db
       WORDPRESS_DB_USER: root
       WORDPRESS_DB_PASSWORD: root
+      WORDPRESS_DB_NAME: wordpress_db
 
   wordpress:
     image: wordpress:latest
     restart: always
     depends_on:
       - php
+      - db
     volumes:
-      - ./site:/var/www/html
+      - ./site:/var/www/html:rw
+    ports:
+      - "1026:80"  
     environment:
       WORDPRESS_DB_HOST: db
       WORDPRESS_DB_USER: root
       WORDPRESS_DB_PASSWORD: root
+      WORDPRESS_DB_NAME: wordpress_db
 
   nginx:
     image: nginx:latest
     restart: always
     ports:
-      - "80:80"
+      - "1025:80"
     depends_on:
       - php
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:rw
       - ./site:/var/www/html
 
 volumes:
   site:
+  nginx:
+  mysql:
+
+networks:
+  default:
+    name: wordpress-network
