--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,25 +2,35 @@ version: "3.9"
 
 services:
   db:
-    image: mysql:5.7
+    image: mysql:8.3.0
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: wordpress_db
       MYSQL_USER: root
       MYSQL_PASSWORD: root
+      MYSQL_SORT_BUFFER_SIZE: 8M
+      MYSQL_MAX_USER_CONNECTIONS: 100
+      MYSQL_THREAD_CACHE_SIZE: 10
+      MYSQL_INNODB_BUFFER_POOL_SIZE: 820M
+    ulimits:
+      nofile:
+        soft: 262144
+        hard: 262144
+    resources:
+      limits:
+        cpus: "0.9"
+        memory: 1750M
     volumes:
-      - ./mysql:/var/lib/mysql:rw  
+      - db-data:/var/lib/mysql:rw
 
   php:
-    image: php:7.4-fpm
+    image: php:8.3-fpm
     restart: always
     depends_on:
-      - db
-    ports:
-      - "9000:9000"  
+      - db  
     volumes:
-      - ./site:/var/www/html:rw
+      - site:/var/www/html:rw
     environment:
       WORDPRESS_DB_HOST: db
       WORDPRESS_DB_USER: root
@@ -28,15 +38,14 @@ services:
       WORDPRESS_DB_NAME: wordpress_db
 
   wordpress:
-    image: wordpress:latest
+    image: wordpress:6.4.3
     restart: always
     depends_on:
       - php
-      - db
     volumes:
-      - ./site:/var/www/html:rw
+      - site:/var/www/html:rw
     ports:
-      - "1026:80"  
+      - "80:80"  
     environment:
       WORDPRESS_DB_HOST: db
       WORDPRESS_DB_USER: root
@@ -44,21 +53,18 @@ services:
       WORDPRESS_DB_NAME: wordpress_db
 
   nginx:
-    image: nginx:latest
+    image: nginx:1.25.4
     restart: always
     ports:
       - "1025:80"
     depends_on:
       - php
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:rw
-      - ./site:/var/www/html
+      - site:/var/www/html:rw
+      - nginx:/etc/nginx:rw
 
 volumes:
-  site:
+  db-data:
   nginx:
-  mysql:
+  site:
 
-networks:
-  default:
-    name: wordpress-network
